<resources>
    <string name="app_name">ShoppingListApp</string>
    <string name="app_description">A tua lista de compras\nSempre contigo :)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_quantity">Quantidade: </string>
    <string name="menu_add_category">Nova Categoria</string>
    <string name="name">Nome</string>
    <string name="color">Selecione uma cor para a categoria</string>
    <string name="color_choosen">Cor escolhida</string>
    <string name="ok">OK</string>
    <string name="image_description">Imagem</string>
    <string name="menu_search">Procurar</string>
    <string name="menu_my_list">Minha Lista</string>
    <string name="menu_category">Categoria</string>
    <string name="menu_list_category">Ver Categorias</string>
    <string name="menu_home">Home</string>
    <string name="edit">Editar</string>
    <string name="brand">Marca</string>
    <string name="category">Categoria</string>
    <string name="delete">Eliminar</string>
    <string name="quantity_request">Introduza a quantidade que desejar:</string>
    <string name="cancel">Cancelar</string>
</resources>
