<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_my_list"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/menu_my_list"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_list_category"
        android:title="@string/menu_list_category"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_add_category"
        android:title="@string/menu_add_category"
        app:showAsAction="never"/>
</menu>